--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <p>Eu sou keirrison_</p>
         <h1>Eu sou apaixonado</h1>
         <p>Sou apaixonado pelo teatro e por ciência ”fisica”, 
-            sou apaixonado por cultura geek,
-            </p>
+            sou apaixonado por cultura geek,</p>
         <p>Minhas habilidades</p>
         <div>
             <p>atuação</p>
