--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             sou apaixonado por cultura geek,</p>
         <p>Minhas habilidades</p>
         <div>
-            <p>atuação</p>
-            <p>comunicatico</p>
-            <p>persuativo</p>
-            <p>ouvinte</p>
+            <p class="badge bg-secondary">atuação</p>
+            <p class="badge bg-secondary">comunicatico</p>
+            <p class="badge bg-secondary">persuativo</p>
+            <p class="badge bg-secondary">ouvinte</p>
         </div>
     </header>
     <main class="container">
