--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container">
-        <img src="img/Ouvinte.png" alt="avatar da Fernanda" srcset="">
+        <img src="img/galaxia.jpeg" alt="avatar da keirrison_" srcset="">
         <p>Eu sou keirrison_</p>
         <h1>Eu sou apaixonado</h1>
         <p>Sou apaixonado pelo teatro e por ciência ”fisica”, 
