--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h2>Meus projetos</h2>
         <div class="row">
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="..." />
+                <div class="card">
+                    <img src="img/" class="card-img-top" alt="..." />
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
