--- a/index.html
+++ b/index.html
@@ -24,19 +24,45 @@
             <p class="badge bg-secondary">ouvinte</p>
         </div>
     </header>
-    <main class="container">
+    <main class="container mt-5">
         <h2>Meus projetos</h2>
         <div class="row">
+          <!-- projeto 1-->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/" class="card-img-top" alt="..." />
+                    <img src="img/pong.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Minha biblioteca: uma Webpage Personalizada</h5>
                       <p class="card-text">
-                        Some quick example text to build on the card title and make up the bulk of
-                        the card's content.
+                        Este projeto é uma pagina Web que mostra meu jogos favoritos.
                       </p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                  </div>
+            </div>
+            <!-- projeto 2-->
+
+             <div class="col-md-4">
+                <div class="card">
+                    <img src="img/pong.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
+                    <div class="card-body">
+                      <h5 class="card-title">Minha biblioteca: uma Webpage Personalizada</h5>
+                      <p class="card-text">
+                        Este projeto é uma pagina Web que mostra meu jogos favoritos.
+                      </p>
+                      <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                  </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card">
+                    <img src="img/pong.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
+                    <div class="card-body">
+                      <h5 class="card-title">Minha biblioteca: uma Webpage Personalizada</h5>
+                      <p class="card-text">
+                        Este projeto é uma pagina Web que mostra meu jogos favoritos.
+                      </p>
+                      <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                   </div>
             </div>
