--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <div class="card">
                     <img src="img/pong.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Minha biblioteca: uma Webpage Personalizada</h5>
+                      <h5 class="card-title">Minha biblioteca: uma Webpage sobre o pong </h5>
                       <p class="card-text">
-                        Este projeto é uma pagina Web que mostra meu jogos favoritos.
+                        Este projeto foi criado em sala de aula inspirado no ping pong.
                       </p>
                       <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="card">
                     <img src="img/pong.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Minha biblioteca: uma Webpage Personalizada</h5>
+                      <h5 class="card-title">Minha biblioteca: uma Webpage sobre jogos</h5>
                       <p class="card-text">
                         Este projeto é uma pagina Web que mostra meu jogos favoritos.
                       </p>
@@ -58,9 +58,9 @@
                 <div class="card">
                     <img src="img/pong.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Minha biblioteca: uma Webpage Personalizada</h5>
+                      <h5 class="card-title">Minha biblioteca: uma Webpage Personalizada sobre filmes</h5>
                       <p class="card-text">
-                        Este projeto é uma pagina Web que mostra meu jogos favoritos.
+                        Este projeto mostrara todos meu filmes favoritos.
                       </p>
                       <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
