--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
              <div class="col-md-4">
                 <div class="card">
-                    <img src="img/pong.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
+                    <img src="img/the martian.jpg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
                     <div class="card-body">
                       <h5 class="card-title">Minha biblioteca: uma Webpage Personalizada sobre filmes</h5>
                       <p class="card-text">
