--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
              <div class="col-md-4">
                 <div class="card">
-                    <img src="img/pong.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
+                    <img src="img/mine.jpeg" class="card-img-top" alt="imagem do projeto dr biblioteca virtual" />
                     <div class="card-body">
                       <h5 class="card-title">Minha biblioteca: uma Webpage sobre jogos</h5>
                       <p class="card-text">
